# tartball

./: CHANGES.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
context/: antenna_positions.json  info.json  spotless_model_2026_06_18_09_57_45_UTC.json
docs/: Makefile  README.md  example_recipe.yml
tartball/: __init__.py  __main__.py  model.py  ms.py  visibilities.py
tests/: test_model.py  test_ms.py  test_visibilities.py
